Revert usage of connection IDs in mote path